# ckanext-aemet

./: .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
ckanext/aemet/: plugin.py
ckanext/aemet/public/css/: aemet.css
ckanext/aemet/templates/aemet/: aemet_form.html  aemet_view.html
ckanext/aemet/tests/fixtures/: prediccion.json
docker/: ckan-entrypoint.sh  init-db.sh
