[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-aemet"
version = "0.1.0"
description = "CKAN extension for AEMET weather data visualization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Desidedatum"}
]
keywords = ["CKAN", "extension", "weather", "AEMET", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.10.0",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/desidedatum/ckanext-aemet"
Repository = "https://github.com/desidedatum/ckanext-aemet"
Issues = "https://github.com/desidedatum/ckanext-aemet/issues"

[project.entry-points."ckan.plugins"]
aemet = "ckanext.aemet.plugin:AemetPlugin"

[project.entry-points."babel.extractors"]
ckan = "ckan.lib.extract:extract_ckan"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["ez_setup", "examples", "tests"]
namespaces = true

[tool.setuptools.package-data]
"ckanext.aemet" = [
    "templates/**/*.html",
    "public/**/*.css",
    "public/**/*.js",
]

[tool.pytest.ini_options]
testpaths = ["ckanext/aemet/tests"]

[tool.coverage.run]
source = ["ckanext.aemet"]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 88
target-version = "py310"
